// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ThoughtChain Component ThoughtChain component work 1`] = `
<div
  class="ant-thought-chain css-var-root ant-thought-chain-box"
>
  <div
    class="ant-thought-chain-node"
  >
    <div
      class="ant-thought-chain-status ant-thought-chain-node-icon ant-thought-chain-status-success"
    >
      <span
        aria-label="check-circle"
        class="anticon anticon-check-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="check-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
          />
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
        </svg>
      </span>
    </div>
    <div
      class="ant-thought-chain-node-box"
    >
      <div
        class="ant-thought-chain-node-header"
      >
        <div
          class="ant-thought-chain-node-title"
        >
          Thought Chain Item Title
        </div>
        <div
          class="ant-thought-chain-node-description"
        >
          description
        </div>
      </div>
      <div
        class="ant-thought-chain-node-content"
      >
        <div
          class="ant-thought-chain-node-content-box"
        >
          content test1
        </div>
      </div>
      <div
        class="ant-thought-chain-node-footer"
      >
        Thought Chain Item Footer
      </div>
    </div>
  </div>
  <div
    class="ant-thought-chain-node"
  >
    <div
      class="ant-thought-chain-status ant-thought-chain-node-icon ant-thought-chain-status-error"
    >
      <span
        aria-label="check-circle"
        class="anticon anticon-check-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="check-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
          />
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
        </svg>
      </span>
    </div>
    <div
      class="ant-thought-chain-node-box"
    >
      <div
        class="ant-thought-chain-node-header"
      >
        <div
          class="ant-thought-chain-node-title"
        >
          Thought Chain Item Title
        </div>
        <div
          class="ant-thought-chain-node-description"
        >
          description
        </div>
      </div>
      <div
        class="ant-thought-chain-node-content"
      >
        <div
          class="ant-thought-chain-node-content-box"
        >
          content test2
        </div>
      </div>
      <div
        class="ant-thought-chain-node-footer"
      >
        Thought Chain Item Footer
      </div>
    </div>
  </div>
  <div
    class="ant-thought-chain-node"
  >
    <div
      class="ant-thought-chain-status ant-thought-chain-node-icon ant-thought-chain-status-loading"
    >
      <span
        aria-label="check-circle"
        class="anticon anticon-check-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="check-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
          />
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
        </svg>
      </span>
    </div>
    <div
      class="ant-thought-chain-node-box"
    >
      <div
        class="ant-thought-chain-node-header"
      >
        <div
          class="ant-thought-chain-node-title"
        >
          Thought Chain Item Title
        </div>
        <div
          class="ant-thought-chain-node-description"
        >
          description
        </div>
      </div>
      <div
        class="ant-thought-chain-node-content"
      >
        <div
          class="ant-thought-chain-node-content-box"
        >
          content test3
        </div>
      </div>
      <div
        class="ant-thought-chain-node-footer"
      >
        Thought Chain Item Footer
      </div>
    </div>
  </div>
</div>
`;

exports[`ThoughtChain Component rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-thought-chain css-var-root ant-thought-chain-box ant-thought-chain-rtl"
/>
`;

exports[`ThoughtChain Component test theme component should be rendered correctly when configuring the theme.components 1`] = `
<div
  class="ant-thought-chain css-var-_r_1_ ant-thought-chain-box"
>
  <div
    class="ant-thought-chain-node"
  >
    <div
      class="ant-thought-chain-status ant-thought-chain-node-icon ant-thought-chain-status-success"
    >
      <span
        aria-label="check-circle"
        class="anticon anticon-check-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="check-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
          />
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
        </svg>
      </span>
    </div>
    <div
      class="ant-thought-chain-node-box"
    >
      <div
        class="ant-thought-chain-node-header"
      >
        <div
          class="ant-thought-chain-node-title"
        >
          Thought Chain Item Title
        </div>
        <div
          class="ant-thought-chain-node-description"
        >
          description
        </div>
      </div>
      <div
        class="ant-thought-chain-node-content"
      >
        <div
          class="ant-thought-chain-node-content-box"
        >
          content test1
        </div>
      </div>
      <div
        class="ant-thought-chain-node-footer"
      >
        Thought Chain Item Footer
      </div>
    </div>
  </div>
  <div
    class="ant-thought-chain-node"
  >
    <div
      class="ant-thought-chain-status ant-thought-chain-node-icon ant-thought-chain-status-error"
    >
      <span
        aria-label="check-circle"
        class="anticon anticon-check-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="check-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
          />
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
        </svg>
      </span>
    </div>
    <div
      class="ant-thought-chain-node-box"
    >
      <div
        class="ant-thought-chain-node-header"
      >
        <div
          class="ant-thought-chain-node-title"
        >
          Thought Chain Item Title
        </div>
        <div
          class="ant-thought-chain-node-description"
        >
          description
        </div>
      </div>
      <div
        class="ant-thought-chain-node-content"
      >
        <div
          class="ant-thought-chain-node-content-box"
        >
          content test2
        </div>
      </div>
      <div
        class="ant-thought-chain-node-footer"
      >
        Thought Chain Item Footer
      </div>
    </div>
  </div>
  <div
    class="ant-thought-chain-node"
  >
    <div
      class="ant-thought-chain-status ant-thought-chain-node-icon ant-thought-chain-status-loading"
    >
      <span
        aria-label="check-circle"
        class="anticon anticon-check-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="check-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
          />
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
        </svg>
      </span>
    </div>
    <div
      class="ant-thought-chain-node-box"
    >
      <div
        class="ant-thought-chain-node-header"
      >
        <div
          class="ant-thought-chain-node-title"
        >
          Thought Chain Item Title
        </div>
        <div
          class="ant-thought-chain-node-description"
        >
          description
        </div>
      </div>
      <div
        class="ant-thought-chain-node-content"
      >
        <div
          class="ant-thought-chain-node-content-box"
        >
          content test3
        </div>
      </div>
      <div
        class="ant-thought-chain-node-footer"
      >
        Thought Chain Item Footer
      </div>
    </div>
  </div>
</div>
`;
